--- a/Pray Together/Models/ProfileHeaderCollectionReusableView.xib
+++ b/Pray Together/Models/ProfileHeaderCollectionReusableView.xib
@@ -17,7 +17,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionReusableView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="U6b-Vx-4bR">
+        <collectionReusableView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="U6b-Vx-4bR" customClass="ProfileHeaderCollectionReusableView" customModule="Pray_Together" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="975" height="215"/>
             <autoresizingMask key="autoresizingMask"/>
             <subviews>
@@ -89,6 +89,9 @@
                     <state key="normal" title="Edit Profile">
                         <color key="titleColor" red="0.55087739229999999" green="0.61406648159999999" blue="0.69024974110000004" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                     </state>
+                    <connections>
+                        <action selector="editProfileButtonPressed:" destination="U6b-Vx-4bR" eventType="touchUpInside" id="i9Y-Rw-jPQ"/>
+                    </connections>
                 </button>
             </subviews>
             <color key="backgroundColor" red="0.091001167889999998" green="0.23417572680000001" blue="0.2863805592" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
@@ -105,6 +108,15 @@
                 <constraint firstItem="mp8-3e-Yh5" firstAttribute="leading" secondItem="xYi-3s-rys" secondAttribute="trailing" constant="10" id="y4I-bL-zuY"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="VXr-Tz-HHm"/>
+            <connections>
+                <outlet property="followersLabel" destination="tcs-D2-t5n" id="RUH-wn-u39"/>
+                <outlet property="followingLabel" destination="aOZ-II-CkA" id="Xnm-ON-gI2"/>
+                <outlet property="groupsLabel" destination="041-8u-RlW" id="IgV-dR-cTb"/>
+                <outlet property="organizationsLabel" destination="BPP-Sv-2Zg" id="1vu-jD-oCb"/>
+                <outlet property="prayersLabel" destination="v1r-e5-ZdZ" id="QAh-hd-3ny"/>
+                <outlet property="profileImage" destination="xYi-3s-rys" id="EYH-uj-zdf"/>
+                <outlet property="usernameLabel" destination="r6d-dF-a2U" id="0Qb-bU-YSb"/>
+            </connections>
             <point key="canvasLocation" x="361.5" y="136.5"/>
         </collectionReusableView>
     </objects>
