--- a/Pray Together/Custom Cells/SearchUsersTableViewCell.xib
+++ b/Pray Together/Custom Cells/SearchUsersTableViewCell.xib
@@ -17,23 +17,23 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="SearchUsersTableViewCell" rowHeight="83" id="KGk-i7-Jjw" customClass="SearchUsersTableViewCell" customModule="Pray_Together" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="83"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="SearchUsersTableViewCell" rowHeight="75" id="KGk-i7-Jjw" customClass="SearchUsersTableViewCell" customModule="Pray_Together" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="341" height="75"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="82.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="341" height="74.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="QUb-5Z-ao5" customClass="CustomImageView" customModule="Pray_Together" customModuleProvider="target">
-                        <rect key="frame" x="18" y="16" width="50" height="50"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="defaultProfileImage" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="QUb-5Z-ao5" customClass="CustomImageView" customModule="Pray_Together" customModuleProvider="target">
+                        <rect key="frame" x="18" y="12.5" width="50" height="50"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="50" id="D4u-s6-oc3"/>
                             <constraint firstAttribute="height" constant="50" id="Kcc-MO-fT8"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Username" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tUC-oA-rDi">
-                        <rect key="frame" x="82" y="28" width="109" height="26"/>
-                        <fontDescription key="fontDescription" name="Futura-Bold" family="Futura" pointSize="20"/>
+                        <rect key="frame" x="82" y="26.5" width="92.5" height="22.5"/>
+                        <fontDescription key="fontDescription" name="Futura-Bold" family="Futura" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
@@ -50,7 +50,10 @@
                 <outlet property="profileImage" destination="QUb-5Z-ao5" id="JC2-6B-mRJ"/>
                 <outlet property="usernameLabel" destination="tUC-oA-rDi" id="TjK-Hb-v8n"/>
             </connections>
-            <point key="canvasLocation" x="34" y="73.5"/>
+            <point key="canvasLocation" x="44.5" y="69.5"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="defaultProfileImage" width="102" height="102"/>
+    </resources>
 </document>
